--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
     ></script>
+    <script src="https://unpkg.com/react-query/dist/react-query.production.min.js"></script>
 
     <script>
       var Alert = ReactBootstrap.Alert;
